--- a/assets/css/fontawesome-all.css
+++ b/assets/css/fontawesome-all.css
@@ -4557,7 +4557,7 @@ readers do not read off random characters that represent icons */
 .fa-school:before {
   content: "\f549"; }
 
-.fa-screwdriver:before {
+.fa-screw:before {
   content: "\f54a"; }
 
 .fa-scribd:before {
