--- a/assets/css/stroke-gap.css
+++ b/assets/css/stroke-gap.css
@@ -519,7 +519,7 @@
 .icon-Search:before {
 	content: "\e6a4";
 }
-.icon-Screwdriver:before {
+.icon-Screw:before {
 	content: "\e6a5";
 }
 .icon-Rolodex:before {
