--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -7124,7 +7124,7 @@ textarea.form-control-lg {
 }
 
 .text-secondary {
-  color:#fb7500 !important;
+  color:  red !important;
 }
 
 .text-success {
