--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -219,11 +219,20 @@
 }
 
 
-@media only screen and (max-width: 350px) {
-
+@media only screen and (max-width: 592px) {
+   .page-title h1{
+	font-size: 35px;
+	font-weight: 700;
+   }
 }
 
-
+@media only screen and (max-width: 288px) {
+	.page-title h1{
+	 font-size: 27px;
+	 font-weight: 700;
+	}
+ }
+ 
 
 
 
