--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5842,3 +5842,56 @@ footer .footer-nav svg {
     height: 620px;
     object-fit: cover;
 }
+
+
+
+
+
+
+
+
+
+.page-title {
+    position: relative;
+    overflow: hidden;
+}
+
+.page-title::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+    z-index: 1;
+}
+
+.page-title .auto-container {
+    position: relative;
+    z-index: 2;
+}
+
+.page-title .content-box {
+    position: relative;
+    z-index: 2;
+}
+
+.page-title .content-box .content-wrapper {
+    position: relative;
+    z-index: 2;
+}
+
+.page-title::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(assets/images/background/gallery-3.png);
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+    filter: blur(5px); /* Adjust the blur effect as needed */
+}
